# patina_engine

./: Cargo.toml  build.rs  index.html  readme.md
examples/simple_game/: main.rs  simple_game.rs
src/: actor.rs  camera.rs  camera_controller.rs  component.rs  hdr.rs  instance.rs  lib.rs  light.wgsl  main.rs  model.rs  model_instance.rs  resources.rs  shader.wgsl  shader_challenge.wgsl  sky.wgsl  texture.rs  transform.rs
src/game_instance/: mod.rs
src/prototype/: camera.rs  camera_controller.rs  hdr.rs  hdr.wgsl  instance.rs  light.rs  light.wgsl  mod.rs  model.rs  shader.wgsl  sky.wgsl  state.rs  vertex.rs
src/prototype/rendering/: mod.rs
src/prototype/resources/: equirectangular.wgsl  hdr_loader.rs  mod.rs
src/rendering/: mod.rs
src/resources/: hdr_loader.rs  mod.rs
