[package]
name = "patina_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
cfg-if  = "1"
# todo! replace cgmath with glam
# glam = "0.29"
cgmath = "0.18"
env_logger = "0.10"
instant = "0.1"
log = "0.4"
pollster = "0.3"
tobj = { version = "3.2.1", features = ["async"]}
wgpu = "22.0"
winit = { version = "0.29", features = ["rwh_05"] }

[dependencies.image]
default-features = false
features = ["png", "jpeg"]
version = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
instant = { version = "0.1", features = ["wasm-bindgen"] }
reqwest = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}